--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -46,28 +46,28 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/txt_bet" />
+                        android:src="@drawable/bet" />
 
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/txt_bet" />
+                        android:src="@drawable/bet" />
 
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/txt_credit" />
+                        android:src="@drawable/credit" />
 
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/txt_win" />
+                        android:src="@drawable/you_win" />
                 </LinearLayout>
 
 
@@ -171,7 +171,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
-                android:src="@drawable/pipe" />
+                android:src="@drawable/piper" />
 
             <!-- items bg -->
             <LinearLayout
