--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/bg"
     android:layout_height="match_parent"
-    tools:context=".LaunchActivity">
+    tools:context=".ui.activity.LaunchActivity">
 
     <Button
         android:id="@+id/button_start"
